# tictactoe

./: CMakeLists.txt  README.txt
app/: CMakeLists.txt  main.cpp
docs/: about.txt
src/: CMakeLists.txt  board.cpp  board.hpp  defines.hpp  state.cpp  state.hpp  types.hpp
tests/: CMakeLists.txt  tictactoe_test.cpp
